# elevation

./: .cruft.json  CONTRIBUTING.rst  Makefile  README.rst  environment-minimal.in.yml  environment.in.yml  environment.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: on-push.yml
ci/: environment-ci.yml
docs/: conf.py
elevation/: __init__.py  cli.py  datasource.mk  datasource.py  util.py
tests/: test_cli.py  test_datasource.py  test_util.py
