[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [
  {name = "B-Open Solutions srl, Alessandro Amici", email = "info@bopen.eu"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: GIS"
]
dependencies = ["appdirs", "click", "fasteners"]
description = "Python script to download global terrain digital elevation models, SRTM 30m DEM and SRTM 90m DEM."
dynamic = ["version"]
keywords = ["script", "download", "SRTM", "DEM", "DTM", "global", "digital", "elevation", "terrain", "model"]
license = {file = "LICENSE"}
name = "elevation"
readme = "README.rst"
urls = {documentation = "http://elevation.bopen.eu"}

[project.scripts]
eio = "elevation.cli:eio"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = false

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["elevation"]

[tool.setuptools_scm]
write_to = "elevation/version.py"
write_to_template = """
# Do not change! Do not track in version control!
__version__ = "{version}"
"""
